--- a/templates/index.html
+++ b/templates/index.html
@@ -102,6 +102,8 @@
             </div>
         </div>
     </div>
+    <!-- QR 生成库 -->
+    <script src="{{ url_for('static', filename='js/qrious.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html> 
